# discord-telegram-bridge

./: .gitignore  README.md  discord_telegram_bot.py  flake.nix  install_deps.sh  pyproject.toml  requirements.txt
