[project]
name = "discord-telegram-bridge"
version = "0.1.0"
description = "forward messages between discord and telegram"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "discord-py>=2.5.2",
    "pillow>=11.1.0",
    "python-telegram-bot>=22.0",
]

[project.scripts]
discord-telegram-bridge = "bin:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bin"]

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]
